--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
   @import url('https://fonts.googleapis.com/css?family=Poppins');
 
   body{
-  	background-image: url("../images/Gallery11.jpg");
+  	background-image: url("../images/bg.jpg");
     background-size: cover;
   }
 
